# aws-glue-python-kickstart

./: .env.template  .gitignore  README.md  build.cmd  cdk.json  requirements-dev.txt  requirements-glue.txt  requirements.txt  setup.cfg  setup.py  tox.ini
aws_assets/glue_job_scripts/shell/: sanity_shell_job.py  sanity_shell_job.yaml
aws_assets/glue_job_scripts/spark/: readme
conf/: defaults.yaml  env-dev.yaml  env-prod.yaml
devops/: app.py  osiris_stack.py
devtools/: __init__.py  build_pure_python_module_checker.py
osiris/aws/: __init__.py  s3.py  secrets.py
osiris/aws/glue/: __init__.py  utils.py
osiris/base/: environments.py  fsutils.py  generalutils.py  jobutils.py  logutils.py
osiris/connector/: __init__.py  redshift_module.py
osiris/connector/rest/: http_transport.py
osiris/exceptions/: __init__.py
osiris/jobs/: base.py
osiris/jobs/integration/salesforce/: analyticsservice.py
osiris/vault/: __init__.py
tests/: __init__.py
tests/aws_assets/glue_job_scripts/: __init__.py  test_sanityshelljob.py
tests/examples/: env_usgae_example.py  redshift_module_example.py  s3_usage_example.py  secret_vault_usage_example.py
tests/osiris/: aws_infra_utils.py
tests/osiris/aws/: test_secrets.py
tests/osiris/base/: test_environments.py  test_generalutils.py
tests/osiris/connector/rest/: test_http_transport.py
