[metadata]
version = attr: osiris.__version__.version
classifiers =
    Programming Language :: Python :: 3.6
    Framework :: Core Python
long_description = file: README.md

[options]
zip_safe = True
include_package_data = True
universal = True

[options.package_data]
* = *.txt, *.md

[aliases]
test = pytest


[tool:pytest]
addopts = --html=target/pytest-report.html
cache_dir = target/.pytest_cache
python_files = tests/*
self-contained-html = true
env =
    APP_ENV_NAME=local
    AWS_DEFAULT_REGION=us-east-2
    RUNNING_IN_UNIT_TEST=1

[coverage:report]
exclude_lines = pass

skip_covered = false
fail_under : 75.0

[coverage:html]
directory = target/coverage-reports

[coverage:xml]
output = target/coverage.xml

[coverage:run]
data_file = .coverage


[flake8]
ignore = D203
filename = ./osiris/*/*.py,
           ./tests/*/*.py,
           ./devtools/*/*.py,
           setup.py

max-line-length = 120
max-complexity = 10
format = html
htmldir = target/flake-reports
htmltitle = Python code style violations (PEP-8)
